# filter-license-plate-detection

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  Makefile  README.md  RELEASE.md  models.toml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yaml  create-release.yaml
docs/: _category_.json  overview.md
tests/: test_filter_license_plate_detection.py
