[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8,<9"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["filter_license_plate_detection"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[project]
name = "filter_license_plate_detection"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = "Apache-2.0"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dynamic = ["version"]

dependencies = [
  "openfilter[all]>=0.1.30,<0.2.0",
  "torch>=2.10.0",
  "torchvision>=0.22.0",
  "python-dotenv"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "setuptools==72.2.0",
  "twine>=6.1.0,<7",
  "wheel==0.44.0",
  "pytest==9.0.3",
  "pytest-cov==6.0.0"
]

[[tool.uv.index]]
name = "openfilter"
url = "https://python.openfilter.io/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"